Fixed visibility of image bg

--- a/styles.css
+++ b/styles.css
@@ -1126,7 +1126,7 @@ footer a:hover {
     }
 }
 
-@media (max-width: 416px) and (min-width: 351px) {
+@media (max-width: 416px) and (min-width: 380px) {
     body {
         width: 100%;
         height: auto;
@@ -1192,7 +1192,7 @@ footer a:hover {
     }
     .first-container {
         background-image: url(./assets/hero-bg-mobile.jpg);
-        height: 45vh;
+        height: 40vh;
         justify-content: end;
         gap: 0px;
     }
@@ -1267,7 +1267,7 @@ footer a:hover {
     }
 }
 
-@media (max-width: 356px) {
+@media (max-width: 379px) {
     body {
         width: 100%;
         height: auto;
